<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--系统通用文字-->
    <string name="app_name">魔耳英语教师</string>
    <string name="search">搜索</string>
    <string name="select">选择</string>
    <string name="tv_submit">提交</string>
    <string name="submiting">提交中</string>
    <string name="edit">编辑</string>
    <string name="prompt">提示</string>
    <string name="create">新建</string>
    <string name="all">全部</string>
    <!--app应用文字-->

    <!--登录 start -->
    <string name="login">登录</string>
    <string name="mi_login_ok">我确认登录</string>
    <string name="input_user">手机号码</string>
    <string name="input_user_phone">请输入登录手机号码</string>
    <string name="input_user_pwd">输入登录密码</string>
    <string name="check_user_phone">手机号码格式不正确</string>
    <string name="input_pwd">登录密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="forget_user">输入手机号码</string>
    <string name="inputcode">短信验证码</string>
    <string name="sendcode">发送验证码</string>
    <string name="inputnewpwd">设置新密码</string>
    <string name="inputpwdto">确定新密码</string>
    <string name="forget_sure">确定</string>
    <string name="account_login">账户登陆</string>
    <string name="tv_user_birth">年龄</string>
    <string name="phone_num">手机号</string>
    <string name="new_user">新帐号</string>
    <string name="inputnewphonw">请输入新手机号</string>
    <!--登录 end -->


    <!--首页文字start-->
    <string name="tab_task">作业</string>
    <string name="tab_chat">沟通</string>
    <string name="tab_class">班级</string>
    <string name="tab_mine">我的</string>
    <!--首页文字end-->

    <!--作业start-->
    <string name="send_homework">发布作业</string>
    <string name="task_class">班级</string>
    <string name="task_state">状态</string>
    <string name="task_textbook_assignment">发布课本作业</string>
    <string name="task_supplementary">教辅设置</string>
    <string name="task_choose_supplementary">选择教辅</string>
    <string name="task_choose_content">选择内容</string>
    <string name="task_choose_class">选择班级</string>
    <string name="task_choose_Deadline">截止时间</string>
    <string name="task_choose_ok">完成</string>
    <string name="task_choose_confirm">确认布置</string>
    <string name="task_next">下一步</string>
    <string name="task_homeworkdetails">作业详情</string>
    <string name="task_checkhomeworkresult">检查作业结果</string>
    <string name="task_book_empty">这里空空的</string>
    <string name="task_click_first">请先点击右上角的“教辅设置”</string>
    <string name="task_published">已布置</string>
    <string name="task_unexamined">待检查</string>
    <string name="task_examined">已检查</string>
    <string name="all_options">全部</string>
    <string name="AnswerCard">答题卡</string>
    <string name="Look">已选题</string>
    <string name="no_audio">本题无音频</string>

    <!--作业end-->


    <!--消息start-->
    <string name="chat_list">通讯录</string>
    <string name="contact_default_group">默认分组</string>
    <string name="up_photo">上传照片</string>
    <string name="create_album">新建相册</string>
    <string name="album_input">请输入相册名称</string>

    <!--消息end-->


    <!--我的start-->
    <string name="mine_my_class">我的班级</string>
    <string name="mine_wait_add_class">待入班学生</string>
    <string name="mine_audit_student">学员审核</string>
    <string name="mine_personal_information">个人信息</string>
    <string name="mine_notice">魔耳通知</string>
    <string name="mine_notice_detial">通知详情</string>
    <string name="clean_notice">清空通知</string>
    <string name="mine_setting">设置</string>
    <string name="mine_text_userphone">修改账户手机号</string>
    <string name="mine_text_about">关于我们</string>
    <string name="mine_text_fixpass">修改密码</string>
    <string name="mine_text_clean">清除缓存</string>
    <string name="mine_class_info">班级信息</string>
    <string name="mine_class_space">班级空间</string>
    <string name="mine_send_dynamic">发布动态</string>
    <string name="mine_dynamic">动态</string>
    <string name="mine_send">发布</string>
    <string name="mine_clear">清空</string>
    <string name="text_setting">设置</string>
    <string name="text_help">使用帮助</string>
    <string name="prompt_delete">确定要删除么？</string>
    <string name="class_code">班级码：</string>

    <string name="text_version">版本%s</string>
    <string name="btn_exit">退出登录</string>
    <string name="text_time">%1$s~%2$s</string>
    <string name="text_max">还可以输入%s字</string>
    <string name="user_message">个人信息</string>
    <string name="login_edit">是否要退出登录？</string>
    <string name="tv_user_school">学校</string>

    <string name="sign_out">退出</string>
    <!--时间选择器start -->

    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="select_end_time">请选择截止时间</string>
    <!--时间选择器end-->


    <!--我的end-->

    <string name="mine_teaching_information">教学信息查看</string>
    <string name="ed_user_email">请输入邮箱地址</string>
    <string name="tv_user_name">姓名</string>
    <string name="ed_user_name">请输入姓名</string>

    <string name="tv_user_pwd">密码</string>

    <string name="hint_inputcode">验证码已发送，请注意查收</string>
    <string name="code">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="pwd_instru">6-20位字符,推荐使用字母加数字组合</string>
    <string name="pwd_ok">确认密码</string>
    <string name="old_pwd">原密码</string>
    <string name="inputoldpwd">请输入原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="old_user">原帐号</string>

    <string name="text_pingjia">评论(%s)</string>
    <string name="not_comment">暂无评论</string>
    <string name="inputnewuser">请输入新帐号</string>
    <string name="loginpwd">登录密码</string>

    <string name="input_regit_phone">请输入注册时填写的手机号</string>
    <string name="file_img_update">全部文件%1$s 上传成功%2$s 失败%3$s</string>
    <string name="set_album">修改相册</string>
    <string name="hint_album_name">相册名字不能为空</string>
    <string name="reply"><![CDATA[%1$s回复<font color=\'#44689C\'>%2$s</font>:]]></string>
    <string name="hint_delete_photo">是否要删除照片？</string>
    <string name="hint_down_photo">是否要下载照片？</string>
    <string name="down">下载</string>
    <string name="hint_down_ok">下载成功</string>
    <string name="comments">评论</string>
    <string name="shart">分享</string>
    <string name="hint_comments_text">请输入内容</string>
    <string name="chat_concact_no">暂无通讯录</string>
    <string name="loading">正在登录......</string>
    <string name="file_max_lengths">每附件不超%1$sM</string>
    <string name="login_eu">成功登录汇学习教育云平台</string>
    <string name="scan_valuer">扫描结果</string>
    <string name="web_save_ok">网址添加成功</string>
    <string name="tv_user_email">邮箱</string>
    <string name="angin_back">再按一次返回</string>
    <string name="tv_user_icon">头像</string>
    <string name="tv_user_sign">个性签名</string>
    <string name="tv_user_account">帐号</string>
    <string name="sex">性别</string>
    <string name="dialog_down_file">下载文件</string>
    <string name="save_ok">修改成功</string>
    <string name="not_data">暂无数据</string>
    <string name="ed_user_birth">请点击选择生日</string>
    <string name="ed_user_erroremail">请输入正确的邮箱地址</string>
    <string name="ed_user_copyemail">和历史邮箱一致，请重新输入邮箱</string>
    <string name="nameequel">和历史姓名一致，请重新输入姓名</string>
    <string name="correct_pwd">密码长度只能为6-20位</string>
    <string name="correct_phne">手机号输入错误</string>
    <string name="pwderror">密码输错</string>
    <string name="text_oldnewpwd">新手机号和原手机号相同，无法修改</string>
    <string name="no_chinese">密码不允许含有中文</string>
    <string name="text_oldnewpwd1">新密码两次输入不匹配，请重新输入</string>
    <string name="edit_phone">修改手机号</string>
    <string name="edit_pwd">修改密码</string>
    <string name="edit_user">修改帐号</string>
    <string name="edit_sign">修改个性签名</string>
    <string name="edit_age">修改年龄</string>
    <string name="edit_email">修改邮箱</string>
    <string name="edit_name">修改姓名</string>
    <string name="chinese_lenght">用户名长度为6~16位字符，其中一个中文占3个字符</string>
    <string name="text_oldnewuser">新帐号和原帐号相同，无法修改</string>
    <string name="toast_open_file_tools">找不到可以打开此文件的工具</string>


    <!--error-->
    <string name="e_class_notice">通知</string>
    <string name="e_class_null">暂无班级信息</string>
    <string name="e_photo_null">暂无照片</string>
    <string name="e_log_null">暂无日志数据</string>
    <string name="e_homework">暂无作业</string>
    <string name="e_waitaddclass">暂无学生加入班级</string>
    <string name="title_activity_my_works">MyWorksActivity</string>

    <string name="remove_student">是否要移除学员？</string>

</resources>
