<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_updata"
            style="@style/btn_style"
            android:layout_marginBottom="20dp"
            android:text="@string/up_photo"/>

        <Button
            android:id="@+id/btn_create"
            style="@style/btn_style"
            android:layout_marginBottom="20dp"
            android:text="@string/create_album"/>

        <Button
            android:id="@+id/btn_cancle"
            style="@style/btn_style"
            android:background="@drawable/btn_gray"
            android:text="@string/cancle"/>
    </LinearLayout>
</FrameLayout>
