<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_line"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/layout_tool_text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="@dimen/textpadding"
        android:layout_marginLeft="@dimen/textpadding"
        android:layout_marginRight="@dimen/textpadding"
        android:layout_marginTop="@dimen/textpadding"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/textpadding">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_choose_Deadline"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textpadding"
            android:orientation="horizontal"
            android:padding="@dimen/textpadding"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_choosetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2017"/>

            <TextView
                android:id="@+id/tv_cleartime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="清空"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/task_choose_class"
            android:textSize="@dimen/text14"/>

        <include layout="@layout/child_listview"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:text="@string/task_choose_confirm"
            android:textColor="@color/text_deepgray"/>
    </LinearLayout>
</LinearLayout>


