<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_line"
                android:orientation="vertical">

    <include
        android:id="@+id/login_title"
        layout="@layout/layout_tool_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/login_title"
        android:background="@color/line_gray"/>

    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="80dp">

        <ImageView
            android:id="@+id/image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/image"
            android:layout_marginLeft="25dp"
            android:src="@drawable/ico_user"/>

        <EditText
            android:id="@+id/edUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/image1"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@id/image1"
            android:layout_toRightOf="@id/image1"
            android:background="@null"
            android:hint="@string/input_user"
            android:lineSpacingExtra="8dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/line_gray"
            android:textCursorDrawable="@drawable/sp_while"
            android:textSize="@dimen/text18"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edUser"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/line_gray"/>

        <ImageView
            android:id="@+id/image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/image1"
            android:layout_alignStart="@id/image1"
            android:layout_below="@id/edUser"
            android:layout_marginTop="32dp"
            android:src="@drawable/ico_pwd"/>

        <EditText
            android:id="@+id/edPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edUser"
            android:layout_alignStart="@id/edUser"
            android:layout_alignTop="@id/image2"
            android:background="@null"
            android:hint="@string/input_pwd"
            android:lineSpacingExtra="8dp"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/line_gray"
            android:textCursorDrawable="@drawable/sp_while"
            android:textSize="@dimen/text18"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edPwd"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/line_gray"/>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="15dp"
            android:text="@string/forget_pwd"
            android:textColor="@color/app_bg"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/root">

        <Button
            android:id="@+id/btn_login"
            style="@style/btn_style"
            android:layout_marginBottom="56dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/select_btn_whilebg"
            android:text="@string/login"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>