<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_tool_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/list_divider_color_gravy"
        android:text=""/>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ico_book_empty"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_book_empty"
            android:textSize="@dimen/text18"
            android:textColor="@color/black_tv_cd"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_click_first"
            android:textSize="@dimen/text18"
            android:textColor="@color/black_tv_cd"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/data_layout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/textpadding">

            <ImageView
                android:id="@+id/img_supplementary"
                android:layout_width="70dp"
                android:layout_height="94dp"
                android:layout_marginLeft="@dimen/textpadding"/>

            <TextView
                android:id="@+id/tv_supplementary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_supplementary"
                android:layout_marginLeft="@dimen/textpadding"
                android:layout_marginRight="@dimen/textpadding"
                android:singleLine="true"
                android:textColor="@color/black_tv_6"
                android:textSize="@dimen/text14"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider_color_gravy"
            android:text=""/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/textpadding"
            android:layout_marginLeft="@dimen/textpadding"
            android:text="@string/task_choose_content"
            android:textColor="@color/black_tv_3"
            android:textSize="@dimen/text16"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginBottom="@dimen/textpadding"
            android:layout_marginLeft="@dimen/textpadding"
            android:layout_marginRight="@dimen/textpadding"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/textpadding"
                android:dividerHeight="0px"
                android:overScrollMode="never"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:text="@string/task_next"
                android:textColor="@color/text_deepgray"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


