<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <include layout="@layout/layout_tool_text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider_color_gravy"
            android:text=""/>

        <RelativeLayout
            android:id="@+id/setttin_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSecurity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/textmarginleft"
                android:text="@string/mine_text_userphone"
                android:textColor="@color/black_tv_3"
                android:textSize="@dimen/text18"/>

            <TextView
                android:id="@+id/tv_user_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/textmarginleft"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ico_to"
                android:text="12345678901"
                android:textColor="@color/black_tv_6"
                android:textSize="@dimen/text18"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/textpadding"
            android:layout_marginRight="@dimen/textpadding"
            android:background="@color/list_divider_color_gravy"
            android:text=""/>

        <RelativeLayout
            android:id="@+id/setttin_fixpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvFixpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/textmarginleft"
                android:text="@string/mine_text_fixpass"
                android:textColor="@color/black_tv_3"
                android:textSize="@dimen/text18"/>

            <TextView
                android:id="@+id/tv_user_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/textmarginleft"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ico_to"
                android:text=""
                android:textColor="@color/black_tv_6"
                android:textSize="@dimen/text18"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/textpadding"
            android:layout_marginRight="@dimen/textpadding"
            android:background="@color/list_divider_color_gravy"
            android:text=""/>

        <RelativeLayout
            android:id="@+id/tvclean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/textmarginleft"
                android:text="@string/mine_text_clean"
                android:textColor="@color/black_tv_3"
                android:textSize="@dimen/text18"/>

            <TextView
                android:id="@+id/tv_user_sex_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/textmarginleft"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ico_to"
                android:text="110M"
                android:textSize="@dimen/text16"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/textpadding"
            android:layout_marginRight="@dimen/textpadding"
            android:background="@color/list_divider_color_gravy"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_Exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:text="@string/btn_exit"
            android:textColor="@color/gray_line"/>
    </LinearLayout>

</LinearLayout>